Fix Home header background col height on safari

--- a/src/pages/Home/Home.styles.scss
+++ b/src/pages/Home/Home.styles.scss
@@ -73,6 +73,7 @@
       }
 
       &__Col {
+        height: 100%;
         &--Dark {
           background-color: tokens.$color-background-page-lighter;
         }
